Füge Detailseite für den Shop München hinzu und aktualisiere die Shop-Karten in der Übersicht

--- a/shops.html
+++ b/shops.html
@@ -52,13 +52,13 @@
     </div>
     <div class="container mx-auto grid gap-10 md:grid-cols-3 px-6">
       <!-- Shop Cards -->
-      <div class="bg-gray-100 rounded-2xl overflow-hidden shadow-lg">
-        <img src="images/shop1.jpg" alt="München Leopoldstraße" class="h-48 w-full object-cover" />
+      <a href="shops/shop-muenchen.html" class="group block bg-gray-100 rounded-2xl overflow-hidden shadow-lg transition transform hover:scale-105 hover:shadow-2xl focus:outline-none">
+        <img src="images/shop1.jpg" alt="München Leopoldstraße" class="h-48 w-full object-cover group-hover:brightness-90 transition" />
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2">München – Leopoldstraße</h3>
+          <h3 class="text-xl font-bold mb-2 group-hover:text-red-600 transition">München – Leopoldstraße</h3>
           <p class="text-sm">Leopoldstraße 123<br>80804 München</p>
         </div>
-      </div>
+      </a>
       <div class="bg-gray-100 rounded-2xl overflow-hidden shadow-lg">
         <img src="images/shop2.jpg" alt="Nürnberg Innenstadt" class="h-48 w-full object-cover" />
         <div class="p-6">
