--- a/index.html
+++ b/index.html
@@ -4,27 +4,47 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wettarena Süd GmbH</title>
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Meta -->
   <meta name="description" content="Wettarena Süd – Sportwetten neu erleben" />
+  <!-- Custom accent color in Tailwind -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#d91921', // Rot aus dem Logo (≈ RGB 217 25 33)
+            surface: '#111111'
+          }
+        }
+      }
+    }
+  </script>
 </head>
-<body class="font-sans text-gray-800">
+<body class="font-sans text-white bg-black">
   <!-- ========== Navigation ========== -->
-  <header class="fixed top-0 left-0 w-full bg-white/70 backdrop-blur z-50 shadow-sm">
+  <header class="fixed top-0 left-0 w-full bg-black/70 backdrop-blur z-50 shadow-sm">
     <nav class="container mx-auto flex items-center justify-between p-4">
-      <a href="#hero" class="text-2xl font-extrabold tracking-tight">Wettarena Süd</a>
+      <a href="#hero" class="flex items-center space-x-2">
+        <!-- Logo -->
+        <img src="images/logo.svg" alt="Wettarena Süd Logo" class="h-8 w-auto" />
+      </a>
       <ul class="hidden md:flex space-x-8 text-sm font-semibold">
-        <li><a href="#features" class="hover:text-red-600">Features</a></li>
-        <li><a href="#shops" class="hover:text-red-600">Shops</a></li>
-        <li><a href="#about" class="hover:text-red-600">Über&nbsp;uns</a></li>
-        <li><a href="#contact" class="hover:text-red-600">Kontakt</a></li>
+        <li><a href="#features" class="hover:text-primary">Features</a></li>
+        <li><a href="#shops" class="hover:text-primary">Shops</a></li>
+        <li><a href="#about" class="hover:text-primary">Über&nbsp;uns</a></li>
+        <li><a href="#contact" class="hover:text-primary">Kontakt</a></li>
       </ul>
+      <!-- Burger -->
       <button id="menuBtn" class="md:hidden focus:outline-none" aria-label="Menü öffnen" aria-expanded="false">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
           <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
       </button>
     </nav>
-    <div id="mobileMenu" class="md:hidden hidden bg-white/90 backdrop-blur-sm">
+    <!-- Mobile menu  -->
+    <div id="mobileMenu" class="md:hidden hidden bg-black/90 backdrop-blur-sm">
       <ul class="flex flex-col items-center space-y-6 py-6 text-base font-semibold">
         <li><a href="#features" onclick="toggleMenu()">Features</a></li>
         <li><a href="#shops" onclick="toggleMenu()">Shops</a></li>
@@ -36,111 +56,102 @@
 
   <!-- ========== Hero ========== -->
   <section id="hero" class="h-screen flex items-center justify-center bg-cover bg-center relative" style="background-image:url('images/hero.jpg');">
-    <div class="absolute inset-0 bg-black/60"></div>
-    <div class="relative z-10 text-center text-white p-8">
-      <h1 class="text-4xl md:text-6xl font-black leading-tight drop-shadow-lg">Klare Aussicht<br><span class="text-red-500">auf&nbsp;Gewinn</span></h1>
+    <div class="absolute inset-0 bg-black/70"></div>
+    <div class="relative z-10 text-center p-8">
+      <h1 class="text-4xl md:text-6xl font-black leading-tight drop-shadow-lg">Klare Aussicht<br><span class="text-primary">auf&nbsp;Gewinn</span></h1>
       <p class="mt-6 mb-8 text-lg md:text-xl max-w-xl mx-auto">Sportwetten neu&nbsp;erleben – in&nbsp;Süddeutschland&nbsp;zuhause.</p>
-      <a href="#shops" class="inline-block px-10 py-4 bg-red-600 hover:bg-red-700 rounded-full text-lg font-semibold transition">Unsere&nbsp;Standorte</a>
+      <a href="#shops" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Unsere&nbsp;Standorte</a>
     </div>
   </section>
 
   <!-- ========== Features ========== -->
-  <section id="features" class="py-24 bg-gray-100">
+  <section id="features" class="py-24 bg-black">
     <div class="container mx-auto text-center mb-16 px-6">
       <h2 class="text-4xl font-extrabold mb-4">Warum&nbsp;Wettarena?</h2>
-      <p class="max-w-2xl mx-auto">Innovatives&nbsp;Design, exklusive&nbsp;Ausstattung und modernste&nbsp;Technik – wir setzen Maßstäbe im&nbsp;stationären Sportwetten‑Erlebnis.</p>
+      <p class="max-w-2xl mx-auto">Innovatives&nbsp;Design, exklusive&nbsp;Ausstattung und modernste&nbsp;Technik – wir setzen Maßstäbe im&nbsp;stationären Sportwetten-Erlebnis.</p>
     </div>
     <div class="container mx-auto grid gap-10 md:grid-cols-3 px-6">
-      <div class="p-10 bg-white rounded-2xl shadow-xl text-center">
-        <h3 class="text-xl font-bold mb-2">Innovatives&nbsp;Design</h3>
+      <div class="p-10 bg-surface rounded-2xl shadow-xl text-center">
+        <h3 class="text-xl font-bold mb-2 text-primary">Innovatives&nbsp;Design</h3>
         <p>Atmosphäre, die begeistert – vom&nbsp;Eingang bis zur Lounge.</p>
       </div>
-      <div class="p-10 bg-white rounded-2xl shadow-xl text-center">
-        <h3 class="text-xl font-bold mb-2">Exklusive&nbsp;Ausstattung</h3>
-        <p>Premium‑Möbel und hochauflösende&nbsp;Screens für maximales&nbsp;Erlebnis.</p>
+      <div class="p-10 bg-surface rounded-2xl shadow-xl text-center">
+        <h3 class="text-xl font-bold mb-2 text-primary">Exklusive&nbsp;Ausstattung</h3>
+        <p>Premium-Möbel und hochauflösende&nbsp;Screens für maximales&nbsp;Erlebnis.</p>
       </div>
-      <div class="p-10 bg-white rounded-2xl shadow-xl text-center">
-        <h3 class="text-xl font-bold mb-2">Modernste&nbsp;Technik</h3>
-        <p>Schnelle Terminals, Live‑Wetten &amp;&nbsp;Echtzeit‑Daten ohne&nbsp;Verzögerung.</p>
+      <div class="p-10 bg-surface rounded-2xl shadow-xl text-center">
+        <h3 class="text-xl font-bold mb-2 text-primary">Modernste&nbsp;Technik</h3>
+        <p>Schnelle Terminals, Live-Wetten &amp;&nbsp;Echtzeit-Daten ohne&nbsp;Verzögerung.</p>
       </div>
     </div>
   </section>
 
   <!-- ========== Shops ========== -->
-  <section id="shops" class="py-24">
+  <section id="shops" class="py-24 bg-black">
     <div class="container mx-auto text-center mb-16 px-6">
       <h2 class="text-4xl font-extrabold mb-4">Unsere&nbsp;Shops</h2>
       <p class="max-w-2xl mx-auto">Besuchen&nbsp;Sie uns in den modernsten Wettfilialen&nbsp;Süddeutschlands.</p>
     </div>
     <div class="container mx-auto grid gap-10 md:grid-cols-3 px-6">
-      <div class="bg-gray-100 rounded-2xl overflow-hidden shadow-lg">
+      <!-- München Card -->
+      <a href="shop-muenchen.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
         <img src="images/shop1.jpg" alt="Shop&nbsp;München" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold">München&nbsp;– Leopoldstraße</h3><p class="text-sm">Leopoldstraße&nbsp;123<br>80804&nbsp;München</p></div>
-      </div>
-      <div class="bg-gray-100 rounded-2xl overflow-hidden shadow-lg">
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">München&nbsp;– Leopoldstraße</h3><p class="text-sm">Leopoldstraße&nbsp;123<br>80804&nbsp;München</p></div>
+      </a>
+      <!-- Nürnberg Card -->
+      <div class="bg-surface rounded-2xl overflow-hidden shadow-lg">
         <img src="images/shop2.jpg" alt="Shop&nbsp;Nürnberg" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold">Nürnberg&nbsp;– Innenstadt</h3><p class="text-sm">Königstraße&nbsp;45<br>90402&nbsp;Nürnberg</p></div>
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Nürnberg&nbsp;– Innenstadt</h3><p class="text-sm">Königstraße&nbsp;45<br>90402&nbsp;Nürnberg</p></div>
       </div>
-      <div class="bg-gray-100 rounded-2xl overflow-hidden shadow-lg">
+      <!-- Stuttgart Card -->
+      <div class="bg-surface rounded-2xl overflow-hidden shadow-lg">
         <img src="images/shop3.jpg" alt="Shop&nbsp;Stuttgart" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold">Stuttgart&nbsp;– Königstraße</h3><p class="text-sm">Königstraße&nbsp;26<br>70173&nbsp;Stuttgart</p></div>
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Stuttgart&nbsp;– Königstraße</h3><p class="text-sm">Königstraße&nbsp;26<br>70173&nbsp;Stuttgart</p></div>
       </div>
     </div>
     <div class="container mx-auto text-center mt-12 px-6">
-      <a href="shops.html" class="inline-block px-10 py-4 bg-red-600 hover:bg-red-700 rounded-full text-lg font-semibold text-white transition">Alle&nbsp;Shops&nbsp;ansehen</a>
+      <a href="shops.html" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Alle&nbsp;Shops&nbsp;ansehen</a>
     </div>
   </section>
 
   <!-- ========== About ========== -->
-  <section id="about" class="py-24 bg-gray-100">
+  <section id="about" class="py-24 bg-black">
     <div class="container mx-auto text-center mb-16 px-6">
       <h2 class="text-4xl font-extrabold mb-4">Über&nbsp;uns</h2>
-      <p class="max-w-2xl mx-auto">Seit&nbsp;15&nbsp;Jahren steht Wettarena&nbsp;Süd für Leidenschaft, Innovation und Verantwortung im&nbsp;Sportwetten‑Bereich.</p>
+      <p class="max-w-2xl mx-auto">Seit&nbsp;15&nbsp;Jahren steht Wettarena&nbsp;Süd für Leidenschaft, Innovation und Verantwortung im&nbsp;Sportwetten-Bereich.</p>
     </div>
     <div class="container mx-auto max-w-3xl px-6">
-      <ol class="relative border-l border-gray-300">
-        <li class="mb-10 ml-6">
-          <span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-red-600"></span>
-          <h3 class="font-semibold">2010&nbsp;– Gründung</h3>
-          <p class="text-sm text-gray-600">Start der ersten Filiale in&nbsp;München.</p>
-        </li>
-        <li class="mb-10 ml-6">
-          <span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-red-600"></span>
-          <h3 class="font-semibold">2015&nbsp;– Expansion</h3>
-          <p class="text-sm text-gray-600">Fünf weitere Standorte in&nbsp;Bayern und Baden‑Württemberg.</p>
-        </li>
-        <li class="ml-6">
-          <span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-red-600"></span>
-          <h3 class="font-semibold">2024&nbsp;– Relaunch</h3>
-          <p class="text-sm text-gray-600">Neues Store‑Design &amp; digitales Kundenportal.</p>
-        </li>
+      <ol class="relative border-l border-gray-700">
+        <li class="mb-10 ml-6"><span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-primary"></span><h3 class="font-semibold">2010&nbsp;– Gründung</h3><p class="text-sm text-gray-400">Start der ersten Filiale in&nbsp;München.</p></li>
+        <li class="mb-10 ml-6"><span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-primary"></span><h3 class="font-semibold">2015&nbsp;– Expansion</h3><p class="text-sm text-gray-400">Fünf weitere Standorte in&nbsp;Bayern und Baden-Württemberg.</p></li>
+        <li class="ml-6"><span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-primary"></span><h3 class="font-semibold">2024&nbsp;– Relaunch</h3><p class="text-sm text-gray-400">Neues Store-Design &amp; digitales Kundenportal.</p></li>
       </ol>
     </div>
   </section>
 
   <!-- ========== Contact ========== -->
-  <section id="contact" class="py-24">
+  <section id="contact" class="py-24 bg-black">
     <div class="container mx-auto max-w-4xl px-6">
       <h2 class="text-4xl font-extrabold text-center mb-12">Kontakt</h2>
       <div class="grid gap-10 md:grid-cols-2">
         <div>
-          <h3 class="text-xl font-bold mb-3">Wettarena&nbsp;Süd GmbH</h3>
+          <h3 class="text-xl font-bold mb-3 text-primary">Wettarena&nbsp;Süd GmbH</h3>
           <p>Leopoldstraße&nbsp;123<br>80804&nbsp;München</p>
           <p class="mt-4"><strong>Telefon:</strong> +49&nbsp;89&nbsp;1234567</p>
-          <p><strong>E‑Mail:</strong> <a href="mailto:info@wettarena-sued.de" class="text-red-600 hover:underline">info@wettarena-sued.de</a></p>
+          <p><strong>E-Mail:</strong> <a href="mailto:info@wettarena-sued.de" class="text-primary hover:underline">info@wettarena-sued.de</a></p>
         </div>
         <form class="space-y-4" onsubmit="event.preventDefault(); alert('Danke für Ihre Nachricht!'); this.reset();">
-          <input type="text" placeholder="Ihr&nbsp;Name" class="w-full p-3 border rounded-xl" required />
-          <input type="email" placeholder="E‑Mail" class="w-full p-3 border rounded-xl" required />
-          <textarea placeholder="Nachricht" class="w-full p-3 border rounded-xl h-32" required></textarea>
-          <button type="submit" class="w-full px-8 py-3 bg-red-600 hover:bg-red-700 rounded-full text-white font-semibold transition">Absenden</button>
+          <input type="text" placeholder="Ihr&nbsp;Name" class="w-full p-3 bg-surface border border-gray-700 rounded-xl text-white" required />
+          <input type="email" placeholder="E-Mail" class="w-full p-3 bg-surface border border-gray-700 rounded-xl text-white" required />
+          <textarea placeholder="Nachricht" class="w-full p-3 bg-surface border border-gray-700 rounded-xl h-32 text-white" required></textarea>
+          <button type="submit" class="w-full px-8 py-3 bg-primary hover:bg-primary/80 rounded-full text-white font-semibold transition">Absenden</button>
         </form>
       </div>
     </div>
   </section>
 
   <!-- ========== Footer ========== -->
-  <footer class="py-8 bg-gray-900 text-gray-400 text-center text-sm">
+  <footer class="py-8 bg-black text-gray-500 text-center text-sm">
     <p>©&nbsp;2025 Wettarena&nbsp;Süd GmbH – Alle Rechte vorbehalten.</p>
   </footer>
 
