--- a/shops/shop-muenchen.html
+++ b/shops/shop-muenchen.html
@@ -3,28 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shop – Wettarena Süd GmbH</title>
+  <title>Filiale München – Wettarena Süd GmbH</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <meta name="description" content="Details zur Wettarena Süd Filiale" />
+  <meta name="description" content="Details zur Wettarena Süd Filiale München – Leopoldstraße" />
+  <!-- Tailwind Custom Colors -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#d91921', // Logo‑Rot
+            surface: '#111111'
+          }
+        }
+      }
+    }
+  </script>
 </head>
-<body class="font-sans text-gray-800">
+<body class="font-sans text-white bg-black">
   <!-- ========== Navigation ========== -->
-  <header class="fixed top-0 left-0 w-full bg-white/70 backdrop-blur z-50 shadow-sm">
+  <header class="fixed top-0 left-0 w-full bg-black/70 backdrop-blur z-50 shadow-sm">
     <nav class="container mx-auto flex items-center justify-between p-4">
-      <a href="index.html#hero" class="text-2xl font-extrabold tracking-tight">Wettarena Süd</a>
+      <a href="index.html#hero" class="flex items-center space-x-2">
+        <img src="images/logo.svg" alt="Wettarena Süd Logo" class="h-8 w-auto" />
+      </a>
       <ul class="hidden md:flex space-x-8 text-sm font-semibold">
-        <li><a href="index.html#features" class="hover:text-red-600">Features</a></li>
-        <li><a href="shops.html" class="hover:text-red-600">Alle&nbsp;Shops</a></li>
-        <li><a href="index.html#about" class="hover:text-red-600">Über&nbsp;uns</a></li>
-        <li><a href="index.html#contact" class="hover:text-red-600">Kontakt</a></li>
+        <li><a href="index.html#features" class="hover:text-primary">Features</a></li>
+        <li><a href="shops.html" class="hover:text-primary">Alle&nbsp;Shops</a></li>
+        <li><a href="index.html#about" class="hover:text-primary">Über&nbsp;uns</a></li>
+        <li><a href="index.html#contact" class="hover:text-primary">Kontakt</a></li>
       </ul>
       <button id="menuBtn" class="md:hidden focus:outline-none" aria-label="Menü öffnen" aria-expanded="false">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-white">
           <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
       </button>
     </nav>
-    <div id="mobileMenu" class="md:hidden hidden bg-white/90 backdrop-blur-sm">
+    <div id="mobileMenu" class="md:hidden hidden bg-black/90 backdrop-blur-sm">
       <ul class="flex flex-col items-center space-y-6 py-6 text-base font-semibold">
         <li><a href="index.html#features" onclick="toggleMenu()">Features</a></li>
         <li><a href="shops.html" onclick="toggleMenu()">Alle&nbsp;Shops</a></li>
@@ -36,43 +51,43 @@
 
   <!-- ========== Hero ========== -->
   <section class="h-72 flex items-center justify-center bg-cover bg-center relative mt-16" style="background-image:url('images/shop-hero.jpg');">
-    <div class="absolute inset-0 bg-black/60"></div>
-    <div class="relative z-10 text-center text-white p-8">
+    <div class="absolute inset-0 bg-black/70"></div>
+    <div class="relative z-10 text-center p-8">
       <h1 class="text-3xl md:text-5xl font-black drop-shadow-lg">Filiale&nbsp;München</h1>
     </div>
   </section>
 
   <!-- ========== Shop Details ========== -->
-  <section class="py-24">
+  <section class="py-24 bg-black">
     <div class="container mx-auto grid gap-16 md:grid-cols-2 px-6">
       <img src="images/shop1-large.jpg" alt="Filialfoto München" class="w-full rounded-2xl shadow-xl object-cover" loading="lazy" />
       <div class="space-y-6">
-        <h2 class="text-4xl font-extrabold">München – Leopoldstraße</h2>
-        <p>Erleben Sie Sportwetten auf höchstem Niveau in unserer Münchner Flagship-Filiale – mit Premium-Interior, Live-Screens und komfortabler&nbsp;Lounge.</p>
-        <div class="text-sm">
-          <p class="mb-1"><strong>Adresse:</strong><br>Leopoldstraße&nbsp;123, 80804&nbsp;München</p>
-          <p class="mb-1"><strong>Öffnungszeiten:</strong><br>Mo–So&nbsp;10:00–23:00&nbsp;Uhr</p>
-          <p class="mb-1"><strong>Telefon:</strong> +49&nbsp;89&nbsp;1234567</p>
-          <p><strong>E-Mail:</strong> <a href="mailto:muc@wettarena-sued.de" class="text-red-600 hover:underline">muc@wettarena-sued.de</a></p>
+        <h2 class="text-4xl font-extrabold text-primary">München – Leopoldstraße</h2>
+        <p class="text-gray-300">Erleben Sie Sportwetten auf höchstem Niveau in unserer Münchner Flagship‑Filiale – mit Premium‑Interior, Live‑Screens und komfortabler&nbsp;Lounge.</p>
+        <div class="text-sm text-gray-400 space-y-1">
+          <p><strong class="text-white">Adresse:</strong><br>Leopoldstraße&nbsp;123, 80804&nbsp;München</p>
+          <p><strong class="text-white">Öffnungszeiten:</strong><br>Mo–So 10:00–23:00&nbsp;Uhr</p>
+          <p><strong class="text-white">Telefon:</strong> +49 89 1234567</p>
+          <p><strong class="text-white">E‑Mail:</strong> <a href="mailto:muc@wettarena-sued.de" class="text-primary hover:underline">muc@wettarena-sued.de</a></p>
         </div>
-        <a href="https://goo.gl/maps/placeholder" target="_blank" class="inline-block px-8 py-3 bg-red-600 hover:bg-red-700 text-white rounded-full font-semibold transition">Route&nbsp;planen</a>
+        <a href="https://goo.gl/maps/placeholder" target="_blank" class="inline-block px-8 py-3 bg-primary hover:bg-primary/80 rounded-full font-semibold transition">Route&nbsp;planen</a>
       </div>
     </div>
   </section>
 
   <!-- ========== Map ========== -->
-  <section class="pb-24 px-6">
+  <section class="pb-24 px-6 bg-black">
     <div class="container mx-auto rounded-2xl overflow-hidden shadow-xl">
       <!-- Google Map Embed (ersetze "YOUR_EMBED_CODE" durch echten Code) -->
-      <iframe src="https://www.google.com/maps/embed?pb=YOUR_EMBED_CODE" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=YOUR_EMBED_CODE" width="100%" height="450" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
 
   <!-- ========== Gallery ========== -->
-  <section class="pb-24">
+  <section class="pb-24 bg-black">
     <div class="container mx-auto text-center mb-12 px-6">
       <h2 class="text-3xl font-extrabold mb-4">Impressionen</h2>
-      <p class="max-w-2xl mx-auto">Ein Blick in unsere Räumlichkeiten – moderne Ausstattung und beste&nbsp;Atmosphäre.</p>
+      <p class="max-w-2xl mx-auto text-gray-300">Ein Blick in unsere Räumlichkeiten – moderne Ausstattung und beste&nbsp;Atmosphäre.</p>
     </div>
     <div class="container mx-auto grid gap-6 md:grid-cols-3 px-6">
       <img src="images/shop1-gallery1.jpg" alt="Innenraum" class="w-full h-56 object-cover rounded-xl shadow-lg" loading="lazy" />
@@ -82,13 +97,13 @@
   </section>
 
   <!-- ========== CTA ========== -->
-  <section class="pb-24 text-center px-6">
-    <a href="shops.html" class="inline-block px-10 py-4 bg-red-600 hover:bg-red-700 rounded-full text-lg font-semibold text-white transition">Weitere&nbsp;Shops&nbsp;entdecken</a>
+  <section class="pb-24 text-center px-6 bg-black">
+    <a href="shops.html" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Weitere&nbsp;Shops&nbsp;entdecken</a>
   </section>
 
   <!-- ========== Footer ========== -->
-  <footer class="py-8 bg-gray-900 text-gray-400 text-center text-sm">
-    <p>©&nbsp;2025 Wettarena&nbsp;Süd GmbH – Alle Rechte vorbehalten.</p>
+  <footer class="py-8 bg-black text-gray-500 text-center text-sm">
+    <p>© 2025 Wettarena Süd GmbH – Alle Rechte vorbehalten.</p>
   </footer>
 
   <!-- ========== Scripts ========== -->
