--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
     <div class="container mx-auto grid gap-10 md:grid-cols-3 px-6">
       <!-- München Card -->
-      <a href="shop-muenchen.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+      <a href="shops/shop-muenchen.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
         <img src="images/shop1.jpg" alt="Shop&nbsp;München" class="h-48 w-full object-cover" loading="lazy" />
         <div class="p-6"><h3 class="text-xl font-bold text-primary">München&nbsp;– Leopoldstraße</h3><p class="text-sm">Leopoldstraße&nbsp;123<br>80804&nbsp;München</p></div>
       </a>
