--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
     </div>
     <div class="container mx-auto text-center mt-12 px-6">
-      <a href="shops.html" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Alle&nbsp;Shops&nbsp;ansehen</a>
+      <a href="shops/shops.html" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Alle&nbsp;Shops&nbsp;ansehen</a>
     </div>
   </section>
 
