--- a/shops/shops.html
+++ b/shops/shops.html
@@ -65,7 +65,7 @@
     </div>
     <div class="container mx-auto grid gap-10 md:grid-cols-3 px-6">
       <!-- München Card -->
-      <a href="shops/shop-muenchen.html" class="group block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+      <a href="shop-muenchen.html" class="group block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
         <img src="images/shop1.jpg" alt="München Leopoldstraße" class="h-48 w-full object-cover group-hover:brightness-90 transition" loading="lazy" />
         <div class="p-6"><h3 class="text-xl font-bold mb-2 text-primary group-hover:underline">München&nbsp;– Leopoldstraße</h3><p class="text-sm text-gray-400">Leopoldstraße&nbsp;123<br>80804&nbsp;München</p></div>
       </a>
