--- a/shops/shop-muenchen.html
+++ b/shops/shop-muenchen.html
@@ -25,7 +25,7 @@
   <header class="fixed top-0 left-0 w-full bg-black/70 backdrop-blur z-50 shadow-sm">
     <nav class="container mx-auto flex items-center justify-between p-4">
       <a href="index.html#hero" class="flex items-center space-x-2">
-        <img src="images/logo.svg" alt="Wettarena Süd Logo" class="h-8 w-auto" />
+        <img src="../images/logo.svg" alt="Wettarena Süd Logo" class="h-8 w-auto" />
       </a>
       <ul class="hidden md:flex space-x-8 text-sm font-semibold">
         <li><a href="index.html#features" class="hover:text-primary">Features</a></li>
