--- a/shops/shops.html
+++ b/shops/shops.html
@@ -24,7 +24,7 @@
   <!-- ========== Navigation ========== -->
   <header class="fixed top-0 left-0 w-full bg-black/70 backdrop-blur z-50 shadow-sm">
     <nav class="container mx-auto flex items-center justify-between p-4">
-      <a href="index.html#hero" class="flex items-center space-x-2">
+      <a href="../index.html#hero" class="flex items-center space-x-2">
         <img src="../images/logo.svg" alt="Wettarena Süd Logo" class="h-8 w-auto" />
       </a>
       <ul class="hidden md:flex space-x-8 text-sm font-semibold">
@@ -96,7 +96,7 @@
       </div>
     </div>
     <div class="container mx-auto text-center mt-12 px-6">
-      <a href="index.html#shops" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Zurück&nbsp;zur&nbsp;Hauptseite</a>
+      <a href="../index.html#shops" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Zurück&nbsp;zur&nbsp;Hauptseite</a>
     </div>
   </section>
 
