--- a/shops/shops.html
+++ b/shops/shops.html
@@ -29,7 +29,7 @@
       </a>
       <ul class="hidden md:flex space-x-8 text-sm font-semibold">
         <li><a href="index.html#features" class="hover:text-primary">Features</a></li>
-        <li><a href="index.html#shops" class="hover:text-primary">Shops</a></li>
+        <li><a href="index.html#shops" class="hover:text-primary">Alle&nbsp;Shops</a></li>
         <li><a href="index.html#about" class="hover:text-primary">Über&nbsp;uns</a></li>
         <li><a href="index.html#contact" class="hover:text-primary">Kontakt</a></li>
       </ul>
@@ -42,7 +42,7 @@
     <div id="mobileMenu" class="md:hidden hidden bg-black/90 backdrop-blur-sm">
       <ul class="flex flex-col items-center space-y-6 py-6 text-base font-semibold">
         <li><a href="index.html#features" onclick="toggleMenu()">Features</a></li>
-        <li><a href="#shops-list" onclick="toggleMenu()">Shops</a></li>
+        <li><a href="#shops-list" onclick="toggleMenu()">Alle&nbsp;Shops</a></li>
         <li><a href="index.html#about" onclick="toggleMenu()">Über&nbsp;uns</a></li>
         <li><a href="index.html#contact" onclick="toggleMenu()">Kontakt</a></li>
       </ul>
@@ -64,36 +64,46 @@
       <p class="max-w-2xl mx-auto text-gray-300">Finden Sie Ihre nächste Wettarena&nbsp;Filiale.</p>
     </div>
     <div class="container mx-auto grid gap-10 md:grid-cols-3 px-6">
-      <!-- München Card -->
-      <a href="shop-muenchen.html" class="group block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
-        <img src="images/shop1.jpg" alt="München Leopoldstraße" class="h-48 w-full object-cover group-hover:brightness-90 transition" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold mb-2 text-primary group-hover:underline">München&nbsp;– Leopoldstraße</h3><p class="text-sm text-gray-400">Leopoldstraße&nbsp;123<br>80804&nbsp;München</p></div>
+      <!-- München Card 1-->
+      <a href="shop-muenchen1.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="../images/muenchen1/image00019.jpeg" alt="Shop&nbsp;München" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">München</h3><p class="text-sm">Landsberger&nbsp;Straße&nbsp;476<br>81241&nbsp;München</p></div>
       </a>
-      <!-- Nürnberg Card -->
-      <div class="bg-surface rounded-2xl overflow-hidden shadow-lg">
-        <img src="images/shop2.jpg" alt="Nürnberg Innenstadt" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold mb-2 text-primary">Nürnberg&nbsp;– Innenstadt</h3><p class="text-sm text-gray-400">Königstraße&nbsp;45<br>90402&nbsp;Nürnberg</p></div>
-      </div>
-      <!-- Stuttgart Card -->
-      <div class="bg-surface rounded-2xl overflow-hidden shadow-lg">
-        <img src="images/shop3.jpg" alt="Stuttgart Königstraße" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold mb-2 text-primary">Stuttgart&nbsp;– Königstraße</h3><p class="text-sm text-gray-400">Königstraße&nbsp;26<br>70173&nbsp;Stuttgart</p></div>
-      </div>
+      <!-- München Card 2-->
+      <a href="shop-muenchen2.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="../images/muenchen2/image00013.jpeg" alt="Shop&nbsp;München" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">München</h3><p class="text-sm">Waldfriedhofstraße&nbsp;115<br>81377&nbsp;München</p></div>
+      </a>
       <!-- Augsburg Card -->
-      <div class="bg-surface rounded-2xl overflow-hidden shadow-lg">
-        <img src="images/shop4.jpg" alt="Augsburg Bahnhofstraße" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold mb-2 text-primary">Augsburg&nbsp;– Bahnhofstraße</h3><p class="text-sm text-gray-400">Bahnhofstraße&nbsp;9<br>86150&nbsp;Augsburg</p></div>
-      </div>
-      <!-- Regensburg Card -->
-      <div class="bg-surface rounded-2xl overflow-hidden shadow-lg">
-        <img src="images/shop5.jpg" alt="Regensburg Altstadt" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold mb-2 text-primary">Regensburg&nbsp;– Altstadt</h3><p class="text-sm text-gray-400">Ludwigstraße&nbsp;6<br>93047&nbsp;Regensburg</p></div>
-      </div>
-      <!-- Ulm Card -->
-      <div class="bg-surface rounded-2xl overflow-hidden shadow-lg">
-        <img src="images/shop6.jpg" alt="Ulm Hirschstraße" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold mb-2 text-primary">Ulm&nbsp;– Hirschstraße</h3><p class="text-sm text-gray-400">Hirschstraße&nbsp;14<br>89073&nbsp;Ulm</p></div>
-      </div>
+      <a href="shop-augsburg.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="../images/augsburg/image00003.jpeg" alt="Shop&nbsp;Augsburg" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Augsburg</h3><p class="text-sm">Wertachstraße&nbsp;19<br>81653&nbsp;Augsburg</p></div>
+      </a>
+      <!-- Kitzingen Card 1-->
+      <a href="shop-kitzingen1.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="../images/kitzingen1/image00023.jpeg" alt="Shop&nbsp;Kitzingen" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Kitzingen</h3><p class="text-sm">Hindenburgring-West&nbsp;11<br>97318&nbsp;Kitzingen</p></div>
+      </a>
+      <!-- Kaufbeuren Card -->
+      <a href="shop-kaufbeuren.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="../images/kaufbeuren/image00004.jpeg" alt="Shop&nbsp;Kaufbeuren" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Kaufbeuren</h3><p class="text-sm">Kemptnerstraße&nbsp;21<br>87600&nbsp;Kaufbeuren</p></div>
+      </a>
+      <!-- Fürth Card -->
+      <a href="shop-fuerth.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="../images/fuerth/2024-05-04.webp" alt="Shop&nbsp;Fürth" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Fürth</h3><p class="text-sm">Hans-Vogel-Straße&nbsp;54<br>90765&nbsp;Fürth</p></div>
+      </a>
+      <!-- Kitzingen Card 2-->
+      <a href="shop-kitzingen2.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="../images/pedning.png" alt="Shop&nbsp;Kitzingen" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Kitzingen</h3><p class="text-sm">Obere&nbsp;Kirchgassse&nbsp;28<br>97318&nbsp;Kitzingen</p></div>
+      </a>
+      <!-- Rothenburg ob der Tauber Card -->
+      <a href="shop-rothenburg.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="../images/pedning.png" alt="Shop&nbsp;Rothenburg" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Rothenburg&nbsp;ob&nbsp;der&nbsp;Tauber</h3><p class="text-sm">Bensenstraße&nbsp;21<br>91541&nbsp;Rothenburg ob der Tauer</p></div>
+      </a>
     </div>
     <div class="container mx-auto text-center mt-12 px-6">
       <a href="../index.html#shops" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Zurück&nbsp;zur&nbsp;Hauptseite</a>
@@ -101,9 +111,22 @@
   </section>
 
   <!-- ========== Footer ========== -->
-  <footer class="py-8 bg-black text-gray-500 text-center text-sm">
-    <p>©&nbsp;2025 Wettarena&nbsp;Süd GmbH – Alle Rechte vorbehalten.</p>
+  <footer class="py-8 bg-black text-gray-500 text-center text-sm space-x-4">
+    <p class="mb-2">© 2025 Wettarena Süd GmbH – Alle Rechte vorbehalten.</p>
+    <a href="/impressum.html" class="hover:underline">Impressum</a>
+    <a href="/datenschutz.html" class="hover:underline">Datenschutz</a>
   </footer>
+
+    <!-- ========== Cookie Banner ========== -->
+  <div id="cookie-banner" class="fixed bottom-0 left-0 right-0 bg-surface text-white p-4 text-center z-50 shadow-lg">
+    <p class="text-sm">
+      Diese Website verwendet Cookies, um dir das bestmögliche Erlebnis zu bieten.
+      <a href="/datenschutz.html" class="underline text-primary">Mehr erfahren</a>
+    </p>
+    <button onclick="acceptCookies()" class="mt-2 px-4 py-2 bg-primary rounded-full font-semibold hover:bg-primary/80">
+      Einverstanden
+    </button>
+  </div>
 
   <!-- ========== Scripts ========== -->
   <script>
@@ -115,6 +138,28 @@
       mobileMenu.classList.toggle('hidden');
     }
     menuBtn.addEventListener('click', toggleMenu);
+
+    function setCookie(name, value, days) {
+      const date = new Date();
+      date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+      document.cookie = `${name}=${value}; expires=${date.toUTCString()}; path=/; SameSite=Lax`;
+    }
+
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      if (parts.length === 2) return parts.pop().split(';').shift();
+      return null;
+    }
+
+    function acceptCookies() {
+      setCookie("cookiesAccepted", "true", 5);
+      document.getElementById("cookie-banner").style.display = "none";
+    }
+
+    if (getCookie("cookiesAccepted") === "true") {
+      document.getElementById("cookie-banner").style.display = "none";
+    }
   </script>
 </body>
 </html>
