--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
     </div>
     <div class="container mx-auto grid gap-10 md:grid-cols-3 px-6">
       <!-- München Card 1-->
-      <a href="/shops/shop-muenchen1.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+      <a href="shops/shop-muenchen1.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
         <img src="images/muenchen1/image00019.jpeg" alt="Shop&nbsp;München" class="h-48 w-full object-cover" loading="lazy" />
         <div class="p-6"><h3 class="text-xl font-bold text-primary">München</h3><p class="text-sm">Landsberger&nbsp;Straße&nbsp;476<br>81241&nbsp;München</p></div>
       </a>
       <!-- Augsburg Card -->
-      <a href="/shops/shop-augsburg.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+      <a href="shops/shop-augsburg.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
         <img src="images/augsburg/image00003.jpeg" alt="Shop&nbsp;Augsburg" class="h-48 w-full object-cover" loading="lazy" />
         <div class="p-6"><h3 class="text-xl font-bold text-primary">Augsburg</h3><p class="text-sm">Wertachstraße<br>81653&nbsp;Augsburg</p></div>
       </a>
       <!-- Kaufbeuren Card -->
-      <a href="/shops/shop-kaufbeuren.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+      <a href="shops/shop-kaufbeuren.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
         <img src="images/kaufbeuren/image00004.jpeg" alt="Shop&nbsp;Kaufbeuren" class="h-48 w-full object-cover" loading="lazy" />
         <div class="p-6"><h3 class="text-xl font-bold text-primary">Kaufbeuren</h3><p class="text-sm">Kemptnerstraße&nbsp;21<br>87600&nbsp;Kaufbeuren</p></div>
       </a>
