Aktualisiere Links in den Shop-Seiten für korrekte Navigation

--- a/shops/shop-muenchen.html
+++ b/shops/shop-muenchen.html
@@ -28,10 +28,10 @@
         <img src="../images/logo.svg" alt="Wettarena Süd Logo" class="h-8 w-auto" />
       </a>
       <ul class="hidden md:flex space-x-8 text-sm font-semibold">
-        <li><a href="index.html#features" class="hover:text-primary">Features</a></li>
+        <li><a href="../../index.html#features" class="hover:text-primary">Features</a></li>
         <li><a href="shops.html" class="hover:text-primary">Alle&nbsp;Shops</a></li>
-        <li><a href="index.html#about" class="hover:text-primary">Über&nbsp;uns</a></li>
-        <li><a href="index.html#contact" class="hover:text-primary">Kontakt</a></li>
+        <li><a href="../index.html#about" class="hover:text-primary">Über&nbsp;uns</a></li>
+        <li><a href="../index.html#contact" class="hover:text-primary">Kontakt</a></li>
       </ul>
       <button id="menuBtn" class="md:hidden focus:outline-none" aria-label="Menü öffnen" aria-expanded="false">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-white">
@@ -41,10 +41,10 @@
     </nav>
     <div id="mobileMenu" class="md:hidden hidden bg-black/90 backdrop-blur-sm">
       <ul class="flex flex-col items-center space-y-6 py-6 text-base font-semibold">
-        <li><a href="index.html#features" onclick="toggleMenu()">Features</a></li>
+        <li><a href="../index.html#features" onclick="toggleMenu()">Features</a></li>
         <li><a href="shops.html" onclick="toggleMenu()">Alle&nbsp;Shops</a></li>
-        <li><a href="index.html#about" onclick="toggleMenu()">Über&nbsp;uns</a></li>
-        <li><a href="index.html#contact" onclick="toggleMenu()">Kontakt</a></li>
+        <li><a href="../index.html#about" onclick="toggleMenu()">Über&nbsp;uns</a></li>
+        <li><a href="../index.html#contact" onclick="toggleMenu()">Kontakt</a></li>
       </ul>
     </div>
   </header>
