Erhöhe Schriftgröße und Logo-Höhe im Features-Bereich für bessere Sichtbarkeit

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
   <!-- ========== Features ========== -->
   <section id="features" class="py-24 bg-black">
     <div class="container mx-auto text-center mb-16 px-6">
-      <h2 class="text-4xl font-extrabold mb-4">
+      <h2 class="text-5xl font-extrabold mb-4">
         Warum
-        <img src="images/logo.svg" alt="Wettarena Süd Logo" class="inline h-14 align-middle" />
+        <img src="images/logo.svg" alt="Wettarena Süd Logo" class="inline mt-8 h-24 align-middle" />
         ?
       </h2>
     </div>
